3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Added new dragon race to crossfire.
Players of this dragon race can gain resistances
by eating the flesh of their defeated foes.
They can also specify in a certain resistance-type
and gain various abilities when increasing levels.
This "focus" can be switched by eating very special
As announced on cf-devel, this is the patch which
adds a new dragon-race to Crossfire.
Players of this dragon race can gain resistances
by eating the flesh of their defeated foes.
They can also specify in a certain resistance-type
and gain various abilities when increasing levels.
This "focus" can be switched by eating very special
flesh, which will be available for sale.
Dragon players gain special titles which cannot
be overwritten by manually set titles.
AndreasV 2002-03-01

lib/collect.pl.in: Modified so that it uses the image.base.xyz.png to make
sure each listed face in objects has an image, and not the old xbm images
for that task.  Also, ignore all files that end in .png, .xpm, or the
face extension - consider them legitimate files for the arch directory.
MSW 2002-02-25

socket/image.c: Change type of image data to be uint8 from char.  Checksums
were being incorrectly calculated when using the char type.  MSW 2002-02-25

server/main.c: If exit is damned, update players death & WoR home-position
    and delete town portal.
server/apply.c: Fix bug in move_apply. return was used instead of goto
    leave, so recursion_depth wasn't decremented.
mids 02/13/2002

server/spell_effect.c: Fix bug in summon_cult_monster that would result
in crash if monster was killed when inserted.  MSW 2002-02-10
